--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script async src="https://kit.fontawesome.com/f5aeb50b51.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f5aeb50b51.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
